fix overflow in horizontal health bar view attempt 2 (issue #12)

--- a/trackerStyle.css
+++ b/trackerStyle.css
@@ -374,6 +374,7 @@ trackerBlock button {
   height: 98%;
   color: #b1ac9e; /*#9e9a8d;*/
   min-height: 0px;
+  min-width: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -383,6 +384,11 @@ trackerBlock button {
   border-width: 2px 0 0 0;
   box-sizing: border-box;*/
   place-self: center;
+  overflow: hidden;
+}
+
+#hpPanelsContainer * {
+  min-width: 0;
 }
 
 #trackerBlock[data-orientation="horizontal"] #hpPanelsContainer {
@@ -390,19 +396,20 @@ trackerBlock button {
 }
 
 .panelContainer {
-  /*flex: 1 1 50px;*/
+  flex: 1 1 50px;
   width: 100%;
   height: 100%;
   min-height: 0;
+  min-width: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
 }
 
-#trackerBlock[data-orientation="horizontal"] .panelContainer {
+/*#trackerBlock[data-orientation="horizontal"] .panelContainer {
   width: calc(100% / var(--numPanels, 7));
-}
+}*/
 
 .playerPanel {
   box-sizing: border-box;
